# vkShade

./: .gitignore  Justfile  README.md  flake.nix  meson.build  meson_options.txt  org.freedesktop.Platform.VulkanLayer.VKIntox.json  org.freedesktop.Platform.VulkanLayer.vkShade.json  setup_sober.sh  vkintox-run.sh
.flatpak-repo/: summary  summary.idx
.flatpak-repo/summaries/: 388baeedd87c88d8f462dd3ab597fb6016d369e204bd91279a67cda4e30d1db1-85ee062a23052b6faa13019b80c7e7376332d2c8d2bb41d9fb0308cd3b0cfa21.delta  7d8704d475bcefb4136f420b266197ee814324a96693f4740fb3a0fe6b01b472-0f6e1beb98853ce0c264effb778916a5a8b1e6323f048577105e572615a49f51.delta  (+2 more)
.github/: update.json
config/: VKIntox.json.in  meson.build
docs/: ALPHA_DEPTH_MODE.md  config-system.md
scripts/: vkintox-run.in
src/: buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  config.cpp  config.hpp  config_serializer.cpp  config_serializer.hpp  descriptor_set.cpp  descriptor_set.hpp  fake_swapchain.cpp  fake_swapchain.hpp  format.cpp  format.hpp  framebuffer.cpp  framebuffer.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  input_blocker.cpp  input_blocker.hpp  keyboard_input.cpp  keyboard_input.hpp  keyboard_input_wayland.cpp  keyboard_input_wayland.hpp  keyboard_input_x11.cpp  keyboard_input_x11.hpp  logger.cpp  logger.hpp  logical_device.hpp  logical_swapchain.cpp  logical_swapchain.hpp  lut_cube.cpp  lut_cube.hpp  memory.cpp  memory.hpp  meson.build  (+35 more)
src/effects/: effect.cpp  effect.hpp  effect_config.hpp  effect_registry.cpp  effect_registry.hpp  (+6 more)
src/shader/: depth_resolve_alpha.frag.glsl  depth_resolve_alpha_ms.frag.glsl  depth_resolve_alpha_msaa.frag.glsl  depth_resolve_inverted.frag.glsl  depth_resolve_inverted_ms.frag.glsl  depth_resolve_inverted_msaa.frag.glsl  depth_resolve_ms.frag.glsl  depth_resolve_msaa.frag.glsl  depth_resolve_universal.frag.glsl  depth_resolve_universal_ms.frag.glsl  depth_resolve_universal_msaa.frag.glsl  meson.build  normals_to_depth.comp.glsl
tools/: test_shaders.cpp
(+42 files in other folders)
